# strata

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  wsgi.py
database/: schema.sql
src/strata/: __init__.py  cli.py  config.py  db.py  web.py
src/strata.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/strata/blueprints/: admin.py  api.py  auth.py  connections.py  reports.py  schedules.py  tags.py
src/strata/client/: __init__.py  client.py  models.py
src/strata/client/backends/: base.py  http.py  local.py
src/strata/models/: api_link.py  app_setting.py  connection.py  parameter.py  report.py  report_access.py  report_run.py  report_tag.py  schedule.py  tag.py
src/strata/services/: access_service.py  cache_service.py  connection_service.py  email_service.py  export_service.py  query_service.py  schedule_service.py  search_service.py  template_service.py
src/strata/static/css/: app.css
src/strata/static/js/: app.js
src/strata/templates/: base.html  index.html
src/strata/templates/admin/: config.html  index.html  sql.html
src/strata/templates/admin/connections/: edit.html  index.html
src/strata/templates/auth/: login.html
src/strata/templates/reports/: _parameters.html  _results.html  _tags.html  edit.html  index.html  run.html
src/strata/templates/runs/: index.html  view.html
src/strata/templates/schedules/: _preview.html  edit.html  index.html
src/strata/templates/tags/: edit.html  index.html
worker/: schedule_worker.py
