[project]
name = "strata"
version = "0.1.0"
description = "A reporting system with DuckDB query engine"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.0",
    "apsw>=3.45",
    "duckdb>=1.0",
    "gatekeeper",
    "outbox",
    "openpyxl>=3.1",
    "python-dotenv>=1.0",
    "gunicorn>=23.0",
    "click>=8.0",
]

[project.scripts]
strata-admin = "strata.cli:main"
strata-web = "strata.web:main"

[project.optional-dependencies]
dev = [
    "ruff",
    "ty",
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
strata = ["templates/**/*.html", "static/**/*"]

[tool.ruff]
target-version = "py314"
line-length = 100
lint.select = ["E", "F", "I", "UP", "B"]
lint.ignore = ["E501"]

[tool.ty.environment]
python-version = "3.14"
